# fastapi_poc

./: README.md
MySQL/: pyproject.toml
MySQL/my_app/: main.py
MySQL/my_app/api/: dependencies.py  router_config.py
MySQL/my_app/api/routes/: portfolio_route.py  users.py
MySQL/my_app/common/configs/: settings.py
MySQL/my_app/common/models/: department_dtos.py  exceptions.py  user_dtos.py
MySQL/my_app/data/: core.py
MySQL/my_app/data/db_models/: db_department.py  db_user.py  user.py
MySQL/my_app/data/repositories/: base_repository_impl.py  department_repository_impl.py  user_repository_impl.py
MySQL/my_app/domain/entities/: department.py  user.py
MySQL/my_app/domain/repository_interfaces/: base_repository.py  department_repository.py  user_repository.py
MySQL/my_app/domain/service/: department_service.py  user_service.py
MySQL/tests/data/repositories/: test_base_repository_impl.py
MyWebApp/: .gitignore  MyWebApp.sln
MyWebApp/MyWebApp/Properties/: launchSettings.json
my_app/api/routes/: department_routes.py  user_routes.py
my_app/common/configs/: settings.py
practice1/: Jenkinsfile  user.properties
practice1/Hello-World-DotNetCore/WebApplication4/: Dockerfile
practice1/chartNagp/: Chart.yaml  values.yaml
practice1/chartNagp/templates/: deployment.yaml  service.yaml
